[project]
name = "languagebench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiolimiter>=1.1.0",
    "bert-score>=0.3.13",
    "evaluate>=0.4.3",
    "joblib>=1.4.2",
    "nltk>=3.9.1",
    "openai>=1.52.2",
    "pandas>=2.2.3",
    "protobuf>=5.28.3",
    "python-dotenv>=1.0.1",
    "sacrebleu>=2.4.3",
    "sentencepiece>=0.2.0",
    "tiktoken>=0.8.0",
    "tqdm>=4.66.6",
    "transformers>=4.46.1",
]
